--- a/src/styles.css
+++ b/src/styles.css
@@ -83,7 +83,7 @@ input:focus {
 }
 
 /* Submit button */
-button {
+#submitButton {
 	width: 100%;
 	padding: 12px;
 	font-size: 1.2rem;
@@ -97,7 +97,7 @@ button {
 	margin-top: 10px;
 }
 
-button:hover {
+#submitButton:hover {
 	background-color: #4c9a4c; /* Lighter green on hover */
 }
 
@@ -116,11 +116,15 @@ li {
 
 #deleteButton,
 #editButton {
-	width: 150px;
-	height: 50px;
-	font-size: small;
-	margin-top: 0px;
 	margin: 0px 5px 0 5px;
+	padding: 12px;
+	font-size: 1.2rem;
+	font-weight: bold;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
 }
 
 #deleteButton {
